Added and changed filtering route controllers
